; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_imon.c_imon_remote_key_lookup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_imon.c_imon_remote_key_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imon_context = type { i32, i32, i32, i64 }

@KEY_RESERVED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.imon_context*, i64)* @imon_remote_key_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @imon_remote_key_lookup(%struct.imon_context* %0, i64 %1) #0 {
  %3 = alloca %struct.imon_context*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.imon_context* %0, %struct.imon_context** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.imon_context*, %struct.imon_context** %3, align 8
  %9 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @rc_g_keycode_from_table(i32 %10, i64 %11)
  store i64 %12, i64* %5, align 8
  %13 = load %struct.imon_context*, %struct.imon_context** %3, align 8
  %14 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %13, i32 0, i32 0
  store i32 0, i32* %14, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load %struct.imon_context*, %struct.imon_context** %3, align 8
  %17 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %16, i32 0, i32 3
  store i64 %15, i64* %17, align 8
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @KEY_RESERVED, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %34

21:                                               ; preds = %2
  %22 = load i64, i64* %4, align 8
  %23 = and i64 %22, -16385
  store i64 %23, i64* %6, align 8
  %24 = load %struct.imon_context*, %struct.imon_context** %3, align 8
  %25 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i64 @rc_g_keycode_from_table(i32 %26, i64 %27)
  store i64 %28, i64* %5, align 8
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* @KEY_RESERVED, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %21
  store i32 1, i32* %7, align 4
  br label %33

33:                                               ; preds = %32, %21
  br label %34

34:                                               ; preds = %33, %2
  %35 = load i32, i32* %7, align 4
  %36 = load %struct.imon_context*, %struct.imon_context** %3, align 8
  %37 = getelementptr inbounds %struct.imon_context, %struct.imon_context* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  %38 = load i64, i64* %5, align 8
  ret i64 %38
}

declare dso_local i64 @rc_g_keycode_from_table(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
